voice control for chrome

--- a/bootstrap-wysiwyg.css
+++ b/bootstrap-wysiwyg.css
@@ -12,3 +12,15 @@
 	border-bottom-left-radius: 3px; border-top-left-radius: 3px;
 	overflow:scroll;
 }
+#voiceBtn {
+  width: 20px;
+  color: transparent;
+  background-color: transparent;
+  transform: scale(2.0, 2.0);
+  -webkit-transform: scale(2.0, 2.0);
+  -moz-transform: scale(2.0, 2.0);
+  border: transparent;
+  cursor: pointer;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
