--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
  * of the key things about the widget is that it allows you to do your own styling!
  */
 
+
 #editor {
 	max-height: 250px;
 	height: 250px;
@@ -17,6 +18,15 @@
 	overflow: scroll;
 	outline: none;
 }
+#editor:focus{
+    border-color:rgba(82, 168, 236, 0.8);
+    outline:0;
+    outline:thin dotted \9;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+    -moz-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+    box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+
 #voiceBtn {
 	width: 20px;
 	color: transparent;
