--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 }
 
-#voiceBtn {
+.voiceBtn {
 	width: 20px;
 	color: transparent;
 	background-color: transparent;
